value - bug fixed

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <body>
         
-    	<p><input data-bind="value:firstName"> </input></p>
-	<p><input data-bind="value:lastName"> </input></p>
-        <script type='value/javascript' src='bower_components/knockout/dist/knockout.js'></script>
-	<script type='value/javascript' src='0119/app.js'></script>
+    	<p><input data-bind="value:firstName"> </p>
+	<p><input data-bind="value:lastName"> </p>
+        <script type='text/javascript' src='bower_components/knockout/dist/knockout.js'></script>
+	<script type='text/javascript' src='0119/app.js'></script>
     </body>
 </html>
