ko.computed done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         
     	<p><input data-bind="value:firstName"> </p>
 	<p><input data-bind="value:lastName"> </p>
+	<p>Full name: <strong data-bind="text: fullName"></strong></p>
         <script type='text/javascript' src='bower_components/knockout/dist/knockout.js'></script>
 	<script type='text/javascript' src='0119/app.js'></script>
     </body>
