--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     	<p><input data-bind="value:firstName"> </p>
 	<p><input data-bind="value:lastName"> </p>
 	<p>Full name: <strong data-bind="text: fullName"></strong></p>
+	<button data-bind="click: capitalizeLastName">Go caps</button>
         <script type='text/javascript' src='bower_components/knockout/dist/knockout.js'></script>
-	<script type='text/javascript' src='0119/app.js'></script>
+	<script type='text/javascript' src='0121/app.js'></script>
     </body>
 </html>
